# lamefe

./: CMakeLists.txt  README.md  build.txt  lamefe.sln
lame/vc_solution/: UpgradeLog.htm  UpgradeLog2.htm  arch_nasm.props  arch_sse2.props  arch_x87.props  vc9_lame_config.props  vc9_libmp3lame.vcxproj  vc9_libmp3lame.vcxproj.filters  vc9_mpglib.vcxproj  vc9_mpglib.vcxproj.filters
lamefe/: CMakeLists.txt  encoder.cpp  encoder.h  encoderimpl-helper.h  encoderimpl-impl.h  encoderimpl-log.h  encoderimpl-process.cpp  encoderimpl-set.h  encoderimpl-worker.h  encoderimpl.h  endian.h  exception.h  filereader.h  filewriter.h  lamecontext.h  lamefe.cpp  lamefe.vcxproj  lamefe.vcxproj.filters  lamefewin64.vcxproj  lamefewin64.vcxproj.filters  settings.h  stdfilereader.h  stdfilewriter.h  wavereader.h  wide.h
lamefe/win64/: encoderimpl-process.cpp  win64filereader.cpp  win64filereader.h  win64filereaderimpl.h  win64filewriter.cpp  win64filewriter.h  win64filewriterimpl.h  win64helper.h
